# thesis

./: .gitignore  .gitmodules  Makefile  README.md
agda/: Effects.agda  Girard.agda  Irrel.agda  Lam.agda  SystemF.agda
attic/: split.txt
cab/primitive-0.6/: changelog.md  primitive.cabal
cab/primitive-0.6/Control/Monad/: Primitive.hs
cab/primitive-0.6/Data/: Primitive.hs
cab/primitive-0.6/Data/Primitive/: Array.hs  ByteArray.hs  Types.hs
cab/primitive-0.6/Data/Primitive/Internal/: Operations.hs
cab/primitive-0.6/cbits/: primitive-memops.c  primitive-memops.h
cab/primitive-0.6/test/: main.hs
coq/: Girard.v  Lam.v  Vis.v
defense/: Basics.hs  DB2.hs  Dice.hs  Equality.hs  Instances.hs  Main.hs  Nat.hs  ReadDB.hs  TH.hs  classes.schema  classes.table  defense.key  outline.txt  students.schema  students.table
effects/: All.hs  Effects.hs  README.md  Sec211.hs  Sec212.hs  Sec213.hs  Sec225.hs  Sec226.hs  Sec4.hs  notes.txt
hs/: DB.hs  Dynapply.hs  Injectivity.hs  Lam.hs  Lam2.hs  MatchToken.hs  MatchTokenBroken.hs  Part5_2.hs  Part5alt.hs  Part5eir.hs  Part5tf.hs  Sigma.hs  SystemF.hs  ThesisPreamble.hs  TypeRep.hs  robby.hs  singletons.hs  wg28.hs  wg28current.hs
icfp-src/: .gitignore  Makefile  rae.fmt  src.lhs
idr/: Case.idr  Lam.idr  SystemF.idr
notes/: arrows.txt  cayenne.txt  example.txt  fcd.txt  gundry.txt  haskell.txt  icfp.txt  impl.txt  inference.txt  related.txt
ott/: rules.ott  rules_inf.ott  rules_picod.ott  syn.ott  syn_hask.ott  syn_inf.ott  syn_oi.ott  syn_picod.ott  syn_sb.ott  syn_suffix.ott
papers/: notes.txt
pico/: Girard.pico
proposal/: Lam.hs  outline.txt  pres.key
resources/: dissertationsample.tex
tex/: .gitignore  1-intro.lhs  1-motivation.lhs  2-motivation.lhs  3-today-haskell.lhs  4-dep-haskell.tex  4-today-fc.tex  5-dep-fc.tex  7-formal-haskell.tex  8-type-inference.tex  9-implementation.tex  a-fc.tex  abstract.tex  acks.tex  app-d.tex.mng  app-eqtype.tex.mng  app-inference-rules.tex  chapter.lhs  (+39 more)
(+48 files in other folders)
